--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "cache-manager-redis-store": "1.5.0",
     "class-transformer": "0.1.9",
     "class-validator": "0.9.1",
+    "cookie-parser": "1.4.4",
     "crypto": "1.0.1",
     "fastify-formbody": "2.0.0",
     "fastify-swagger": "2.5.0",
