--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,17 @@ version: '3'
 services:
   redis:
     image: redis
+    container_name: altiore_cache
     volumes:
       - ${DATA_PATH_HOST}/redis:/data
     ports:
       - ${REDIS_PORT}:6379
+    expose:
+      - 6379
 
   postgres:
     image: postgres:11.6
+    container_name: altiore_postgres
     restart: always
     volumes:
       - ./docker/postgres-entrypoint-initdb.d:/docker-entrypoint-initdb.d
