--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "cache-manager-redis-store": "1.5.0",
     "class-transformer": "0.1.9",
     "class-validator": "0.9.1",
+    "cli-highlight": "2.1.1",
     "cookie-parser": "1.4.4",
     "crypto": "1.0.1",
     "fastify-formbody": "2.0.0",
@@ -88,7 +89,7 @@
     "@types/socket.io": "2.1.4",
     "@types/supertest": "2.0.4",
     "codecov": "3.0.2",
-    "cross-env": "^5.2.0",
+    "cross-env": "^5.2.1",
     "dotenv": "6.0.0",
     "faker": "^4.1.0",
     "husky": "1.2.0",
@@ -108,7 +109,7 @@
     "tslint-config-prettier": "1.15.0",
     "typeorm-fixtures": "0.8.5",
     "typescript": "3.5.3",
-    "webpack": "^4.41.2",
+    "webpack": "^4.41.5",
     "webpack-cli": "3.0.8",
     "webpack-node-externals": "1.7.2"
   },
