--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "@nestjs/platform-express": "6.10.11",
     "@nestjs/platform-fastify": "6.10.11",
     "@nestjs/platform-socket.io": "6.10.11",
-    "@nestjs/swagger": "3.1.0",
+    "@nestjs/serve-static": "1.0.2",
+    "@nestjs/swagger": "4.1.2",
     "@nestjs/testing": "6.10.11",
     "@nestjs/typeorm": "6.2.0",
     "@nestjs/websockets": "6.10.11",
