--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "module": "commonjs",
     "declaration": false,
+    "declarationMap": false,
     "noImplicitAny": false,
     "removeComments": true,
     "noLib": false,
@@ -9,7 +10,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es2017",
-    "sourceMap": true,
+    "sourceMap": false,
     "allowJs": true,
     "outDir": "./dist",
     "baseUrl": "./src"
