--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: redis
     container_name: altiore_cache
     volumes:
-      - ${DATA_PATH_HOST}/redis:/data
+      - redis-altiore:/data
     ports:
       - ${REDIS_PORT}:6379
     expose:
@@ -16,8 +16,8 @@ services:
     container_name: altiore_postgres
     restart: always
     volumes:
-      - ./docker/postgres-entrypoint-initdb.d:/docker-entrypoint-initdb.d
-      - ./docker/wait-postgres.sh:/usr/bin/wait-postgres
+      - postgres-altiore:/docker-entrypoint-initdb.d
+      - postgres-altiore:/usr/bin/wait-postgres
     environment:
       - POSTGRES_DB=${TYPEORM_DATABASE}
       - POSTGRES_TEST_DB=${POSTGRES_TEST_DB}
@@ -27,7 +27,5 @@ services:
       - ${TYPEORM_PORT}:5432
 
 volumes:
-  postgres:
-    driver: local
-  redis:
-    driver: local
+  postgres-altiore:
+  redis-altiore:
