AL-675: Добавил возможность добавлять/создавать/изменять роли и роли в проекте

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "test:remote": "jest --coverage -i --forceExit && echo -e \"Please, do NOT run LOCALLY!\"",
     "webpack": "webpack --config webpack.config.js",
     "prepare:mails": "mjml src/mail/mjml/*.mjml -o mails/",
+    "typeorm": "./node_modules/.bin/ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "migration:generate": "./node_modules/.bin/ts-node ./node_modules/.bin/typeorm migration:generate --name generated",
     "migration:create": "./node_modules/.bin/ts-node ./node_modules/.bin/typeorm migration:create --name new",
     "migration:up": "./node_modules/.bin/ts-node ./node_modules/.bin/typeorm migration:run",
@@ -52,6 +53,8 @@
     "@nestjs/swagger": "4.1.2",
     "@nestjs/typeorm": "6.2.0",
     "@nestjs/websockets": "6.10.11",
+    "@nestjsx/crud": "4.4.1",
+    "@nestjsx/crud-typeorm": "4.4.1",
     "@sendgrid/mail": "6.3.1",
     "cache-manager": "2.10.0",
     "cache-manager-redis-store": "1.5.0",
