--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -70,8 +70,8 @@ pipelines:
             - git config user.name "Razzwan-CI"
             - git add .
             - git commit -m 'dynamic version'
-            - git checkout -f
-            - git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$PRODUCTION_APP_NAME.git master -f
+            - git status
+            - git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$PRODUCTION_APP_NAME.git HEAD:master --force
 
 definitions:
   services:
