AL-678: исправил конфиги

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "postinstall": "npm run build && npm run migration:up",
     "build": "rm -rf dist && nest build",
     "pretest": "cross-env TYPEORM_DATABASE=altiore_contrib_test node bin/refresh.js && npm run migration:test:up",
-    "test": "cross-env TYPEORM_DATABASE=altiore_contrib_test jest --watch --coverage -i -b --detectOpenHandles",
+    "test": "cross-env TYPEORM_DATABASE=altiore_contrib_test jest --coverage -i -b --detectOpenHandles",
+    "test:watch": "cross-env TYPEORM_DATABASE=altiore_contrib_test jest --watch --coverage -i -b --detectOpenHandles",
     "pretest:dev": "cross-env TYPEORM_DATABASE=altiore_contrib_test node bin/refresh.js && npm run migration:test:up",
     "test:dev": "cross-env TYPEORM_DATABASE=altiore_contrib_test jest -i -b --detectOpenHandles --forceExit --watch",
     "test:coverage": "cross-env TYPEORM_DATABASE=altiore_contrib_test jest -i --forceExit --coverage",
