AL-678: Исправить миграции для продакшн

--- a/package.json
+++ b/package.json
@@ -9,13 +9,12 @@
     "node": ">=8.11.3"
   },
   "scripts": {
-    "start": "sh bin/start.sh && cross-env NODE_ENV=development nodemon",
-    "start:dev": "cross-env NODE_ENV=development nodemon",
+    "start:dev": "sh bin/start.sh && cross-env NODE_ENV=development nodemon",
+    "start": "node dist/main.js",
     "stop": "sh bin/stop.sh",
     "start:hmr": "node dist/server",
-    "start:prod": "npm run build && node dist/main.js",
     "preinstall": "node bin/gcpSetup.js",
-    "postinstall": "npm run build && npm run migration:up",
+    "postinstall": "npm run build && npm run migration:up:prod",
     "build": "rm -rf dist && nest build",
     "pretest": "cross-env TYPEORM_DATABASE=altiore_contrib_test node bin/refresh.js && npm run migration:test:up",
     "test": "cross-env TYPEORM_DATABASE=altiore_contrib_test jest --coverage -i -b --detectOpenHandles",
@@ -32,6 +31,7 @@
     "typeorm": "./node_modules/.bin/ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "migration:generate": "./node_modules/.bin/ts-node ./node_modules/.bin/typeorm migration:generate --name generated",
     "migration:create": "./node_modules/.bin/ts-node ./node_modules/.bin/typeorm migration:create --name new",
+    "migration:up:prod": "./node_modules/.bin/typeorm migration:run",
     "migration:up": "./node_modules/.bin/ts-node ./node_modules/.bin/typeorm migration:run",
     "migration:down": "./node_modules/.bin/ts-node ./node_modules/.bin/typeorm migration:revert",
     "migration:test:up": "cross-env TYPEORM_DATABASE=altiore_contrib_test ./node_modules/.bin/ts-node ./node_modules/.bin/typeorm migration:run",
