--- a/package.json
+++ b/package.json
@@ -86,14 +86,14 @@
     "typeorm": "0.2.24"
   },
   "devDependencies": {
-    "@nestjs/cli": "6.14.1",
-    "@nestjs/schematics": "6.9.0",
+    "@nestjs/cli": "7.1.2",
+    "@nestjs/schematics": "7.0.0",
     "@nestjs/testing": "6.10.11",
     "@types/express": "4.16.1",
     "@types/faker": "4.1.5",
     "@types/jest": "24.0.17",
     "@types/lodash": "4.14.136",
-    "@types/node": "10.5.1",
+    "@types/node": "13.13.2",
     "@types/redis": "2.8.13",
     "@types/socket.io": "2.1.4",
     "@types/supertest": "2.0.4",
@@ -101,10 +101,10 @@
     "dotenv": "6.0.0",
     "faker": "^4.1.0",
     "husky": "1.2.0",
-    "jest": "24.8.0",
+    "jest": "25.4.0",
     "lint-staged": "7.2.2",
     "mjml": "4.5.1",
-    "nodemon": "1.18.7",
+    "nodemon": "2.0.3",
     "prettier": "1.14.2",
     "rimraf": "2.6.2",
     "superagent-defaults": "0.1.14",
@@ -116,8 +116,8 @@
     "tslint": "5.11.0",
     "tslint-config-prettier": "1.15.0",
     "typeorm-fixtures": "0.8.6",
-    "typescript": "3.5.3",
-    "webpack": "^4.41.5",
+    "typescript": "3.8.3",
+    "webpack": "4.43.0",
     "webpack-cli": "3.0.8",
     "webpack-node-externals": "1.7.2"
   },
