--- a/package.json
+++ b/package.json
@@ -43,19 +43,18 @@
   },
   "dependencies": {
     "@google-cloud/storage": "3.0.3",
-    "@nestjs/common": "6.10.11",
-    "@nestjs/core": "6.10.11",
-    "@nestjs/microservices": "6.5.3",
-    "@nestjs/passport": "6.1.0",
-    "@nestjs/platform-express": "6.10.11",
-    "@nestjs/platform-fastify": "6.10.11",
-    "@nestjs/platform-socket.io": "6.10.11",
+    "@nestjs/common": "7.0.8",
+    "@nestjs/core": "7.0.8",
+    "@nestjs/microservices": "7.0.8",
+    "@nestjs/passport": "7.0.0",
+    "@nestjs/platform-express": "7.0.8",
+    "@nestjs/platform-socket.io": "7.0.8",
     "@nestjs/serve-static": "1.0.2",
     "@nestjs/swagger": "4.1.2",
-    "@nestjs/typeorm": "6.2.0",
-    "@nestjs/websockets": "6.10.11",
-    "@nestjsx/crud": "4.4.1",
-    "@nestjsx/crud-typeorm": "4.4.1",
+    "@nestjs/typeorm": "7.0.0",
+    "@nestjs/websockets": "7.0.8",
+    "@nestjsx/crud": "4.4.5",
+    "@nestjsx/crud-typeorm": "4.4.5",
     "@sendgrid/mail": "6.3.1",
     "cache-manager": "2.10.0",
     "cache-manager-redis-store": "1.5.0",
@@ -88,7 +87,7 @@
   "devDependencies": {
     "@nestjs/cli": "7.1.2",
     "@nestjs/schematics": "7.0.0",
-    "@nestjs/testing": "6.10.11",
+    "@nestjs/testing": "7.0.8",
     "@types/express": "4.16.1",
     "@types/faker": "4.1.5",
     "@types/jest": "24.0.17",
@@ -99,7 +98,7 @@
     "@types/supertest": "2.0.4",
     "cross-env": "^5.2.1",
     "dotenv": "6.0.0",
-    "faker": "^4.1.0",
+    "faker": "4.1.0",
     "husky": "1.2.0",
     "jest": "25.4.0",
     "lint-staged": "7.2.2",
