--- a/heroku/app.json
+++ b/heroku/app.json
@@ -5,6 +5,11 @@
   "logo": "https://cdn.rawgit.com/heroku/node-js-getting-started/master/public/node.svg",
   "keywords": ["node", "express", "heroku"],
   "image": "heroku/nodejs",
+  "engines": {
+    "node": "12.16.x",
+    "npm": "6.x",
+    "yarn": "1.x"
+  },
   "buildpacks": [
     {
       "url": "https://github.com/carloluis/heroku-buildpack-vim"
