--- a/heroku/app.json
+++ b/heroku/app.json
@@ -7,8 +7,7 @@
   "image": "heroku/nodejs",
   "engines": {
     "node": "12.16.x",
-    "npm": "6.x",
-    "yarn": "1.x"
+    "npm": "6.x"
   },
   "buildpacks": [
     {
