AL-727: add lastCommit to runned tests

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "postinstall": "npm run build && npm run migration:up:prod",
     "build": "rm -rf dist && nest build",
     "pretest": "cross-env TYPEORM_DATABASE=altiore_contrib_test node bin/refresh.js && npm run migration:test:up",
-    "test": "cross-env TYPEORM_DATABASE=altiore_contrib_test jest --coverage -i -b --detectOpenHandles",
+    "test": "cross-env TYPEORM_DATABASE=altiore_contrib_test jest --coverage --lastCommit -i -b --detectOpenHandles",
     "test:watch": "cross-env TYPEORM_DATABASE=altiore_contrib_test jest --watch --coverage -i -b --detectOpenHandles",
     "pretest:dev": "cross-env TYPEORM_DATABASE=altiore_contrib_test node bin/refresh.js && npm run migration:test:up",
     "test:dev": "cross-env TYPEORM_DATABASE=altiore_contrib_test jest -i -b --detectOpenHandles --forceExit --watch",
@@ -26,7 +26,7 @@
     "pretest:changed:only": "npm run pretest",
     "test:changed:only": "cross-env TYPEORM_DATABASE=altiore_contrib_test jest -i -b --lastCommit --detectOpenHandles --forceExit",
     "pretest:remote": "node bin/refresh.js && npm run migration:up && echo  \"Please, do NOT run LOCALLY!\"",
-    "test:remote": "jest --coverage -i --forceExit && echo -e \"Please, do NOT run LOCALLY!\"",
+    "test:remote": "jest --lastCommit -i --forceExit && echo -e \"Please, do NOT run LOCALLY!\"",
     "webpack": "webpack --config webpack.config.js",
     "prepare:mails": "mjml src/mail/mjml/*.mjml -o mails/",
     "typeorm": "./node_modules/.bin/ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
