AL-842: GitHub интеграция

--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,6 @@ DATA_PATH_HOST=~/.my-docker/altiore
 GOOGLE_APPLICATION_BUCKET=altiore
 GOOGLE_APPLICATION_CREDENTIALS=altiore-8888-aaaaaaaaa.json
 GOOGLE_CLOUD_CRED={"json object with credentials here"}
+
+# GitHub webhoos secret
+GIT_HUB_WEBHOOKS_SECRET=
