AL-394: add refresh token

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@google-cloud/storage": "3.0.3",
     "@nestjs/common": "7.0.8",
     "@nestjs/core": "7.0.8",
+    "@nestjs/jwt": "7.0.0",
     "@nestjs/microservices": "7.0.8",
     "@nestjs/passport": "7.0.0",
     "@nestjs/platform-express": "7.0.8",
@@ -68,12 +69,13 @@
     "helmet": "3.21.1",
     "jsonwebtoken": "8.3.0",
     "lodash": "4.17.15",
-    "moment": "2.22.2",
+    "moment": "2.26.0",
     "multer": "1.4.2",
     "mustache": "2.3.0",
     "passport": "0.4.0",
     "passport-http-bearer": "1.0.1",
     "passport-jwt": "4.0.0",
+    "passport-local": "1.0.0",
     "pg": "7.4.3",
     "redis": "2.8.0",
     "reflect-metadata": "0.1.13",
@@ -91,6 +93,8 @@
     "@types/jest": "24.0.17",
     "@types/lodash": "4.14.136",
     "@types/node": "13.13.2",
+    "@types/passport-jwt": "3.0.3",
+    "@types/passport-local": "1.0.33",
     "@types/redis": "2.8.13",
     "@types/socket.io": "2.1.4",
     "@types/supertest": "2.0.4",
@@ -106,13 +110,13 @@
     "rimraf": "2.6.2",
     "superagent-defaults": "0.1.14",
     "supertest": "3.3.0",
-    "ts-jest": "24.0.2",
+    "ts-jest": "24.3.0",
     "ts-loader": "4.4.2",
     "ts-node": "7.0.0",
     "tsconfig-paths": "3.4.2",
     "tslint": "5.11.0",
     "tslint-config-prettier": "1.15.0",
-    "typeorm-fixtures": "0.8.6",
+    "typeorm-fixtures": "0.8.7",
     "typescript": "3.9.2",
     "webpack": "4.43.0",
     "webpack-cli": "3.0.8",
