AL-842: Добавил роут для хуков github в исключения

--- a/.env.example
+++ b/.env.example
@@ -29,3 +29,5 @@ GOOGLE_CLOUD_CRED={"json object with credentials here"}
 
 # GitHub webhoos secret
 GIT_HUB_WEBHOOKS_SECRET=
+
+SERVER_ORIGIN_WHITELIST=['']
