--- a/.env.example
+++ b/.env.example
@@ -30,4 +30,4 @@ GOOGLE_CLOUD_CRED={"json object with credentials here"}
 # GitHub webhoos secret
 GIT_HUB_WEBHOOKS_SECRET=
 
-SERVER_ORIGIN_WHITELIST=['']
+SERVER_ORIGIN_WHITELIST=["http://localhost:8181"]
