--- a/package.json
+++ b/package.json
@@ -129,7 +129,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run build && npm run test:changed:only && lint-staged"
+      "pre-commit": "npm run build && lint-staged"
     }
   },
   "lint-staged": {
