LR-394: защита от спама. Исправил обновление ключа

--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,10 @@ POSTGRES_TEST_DB=altiore_contrib_test
 REDIS_PORT=6379
 
 JWT_SECRET=wrong-jwt-secret-32-characters
-JWT_EXPIRES_IN=3600
+JWT_EXPIRES_IN=900
+
+REFRESH_SECRET=wrong-refresh-secret-32-characters
+REFRESH_EXPIRES_IN=7 days
 
 SENDGRID_API_KEY=wrong-api-key
 
@@ -31,3 +34,6 @@ GOOGLE_CLOUD_CRED={"json object with credentials here"}
 GIT_HUB_WEBHOOKS_SECRET=
 
 SERVER_ORIGIN_WHITELIST=["http://localhost:8181"]
+
+# Google reCAPTCHA token: https://developers.google.com/recaptcha/docs/v3
+GOOGLE_RECAPTCHA_TOKEN=
