--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
     "@nestjs/testing": "7.0.8",
     "@types/express": "4.16.1",
     "@types/faker": "4.1.5",
-    "@types/jest": "24.0.17",
+    "@types/jest": "25.2.3",
     "@types/lodash": "4.14.136",
     "@types/node": "13.13.2",
     "@types/passport-jwt": "3.0.3",
@@ -103,7 +103,7 @@
     "dotenv": "6.0.0",
     "faker": "4.1.0",
     "husky": "1.2.0",
-    "jest": "25.4.0",
+    "jest": "26.0.1",
     "lint-staged": "7.2.2",
     "mjml": "4.5.1",
     "nodemon": "2.0.3",
@@ -111,7 +111,7 @@
     "rimraf": "2.6.2",
     "superagent-defaults": "0.1.14",
     "supertest": "3.3.0",
-    "ts-jest": "24.3.0",
+    "ts-jest": "26.1.0",
     "ts-loader": "4.4.2",
     "ts-node": "7.0.0",
     "tsconfig-paths": "3.4.2",
@@ -120,7 +120,7 @@
     "typeorm-fixtures": "0.8.7",
     "typescript": "3.9.2",
     "webpack": "4.43.0",
-    "webpack-cli": "3.0.8",
+    "webpack-cli": "^3.3.11",
     "webpack-node-externals": "1.7.2"
   },
   "repository": {
