--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "postinstall": "npm run build && npm run migration:up:prod",
     "build": "rm -rf dist && nest build",
     "pretest": "cross-env TYPEORM_DATABASE=altiore_contrib_test node bin/refresh.js && npm run migration:test:up",
-    "test": "cross-env TYPEORM_DATABASE=altiore_contrib_test jest --logHeapUsage --coverage -i -b --detectOpenHandles",
+    "test": "node --expose-gc node_modules/.bin/cross-env TYPEORM_DATABASE=altiore_contrib_test node_modules/.bin/jest --logHeapUsage --coverage -i -b --detectOpenHandles",
+    "test:m": "node --expose-gc node_modules/.bin/cross-env TYPEORM_DATABASE=altiore_contrib_test node_modules/.bin/jest --logHeapUsage --coverage --detectLeaks -i -b --detectOpenHandles",
     "test:watch": "cross-env TYPEORM_DATABASE=altiore_contrib_test jest --watch --coverage -i -b --detectOpenHandles",
     "pretest:dev": "cross-env TYPEORM_DATABASE=altiore_contrib_test node bin/refresh.js && npm run migration:test:up",
     "test:dev": "cross-env TYPEORM_DATABASE=altiore_contrib_test jest -i -b --detectOpenHandles --forceExit --watch",
@@ -44,17 +45,17 @@
   },
   "dependencies": {
     "@google-cloud/storage": "3.0.3",
-    "@nestjs/common": "7.0.8",
-    "@nestjs/core": "7.0.8",
+    "@nestjs/common": "7.1.3",
+    "@nestjs/core": "7.1.3",
     "@nestjs/jwt": "7.0.0",
-    "@nestjs/microservices": "7.0.8",
+    "@nestjs/microservices": "7.1.3",
     "@nestjs/passport": "7.0.0",
-    "@nestjs/platform-express": "7.0.8",
-    "@nestjs/platform-socket.io": "7.0.8",
+    "@nestjs/platform-express": "7.1.3",
+    "@nestjs/platform-socket.io": "7.1.3",
     "@nestjs/serve-static": "1.0.2",
-    "@nestjs/swagger": "4.5.3",
+    "@nestjs/swagger": "4.5.10",
     "@nestjs/typeorm": "7.0.0",
-    "@nestjs/websockets": "7.0.8",
+    "@nestjs/websockets": "7.1.3",
     "@nestjsx/crud": "4.4.5",
     "@nestjsx/crud-typeorm": "4.4.5",
     "@sendgrid/mail": "6.3.1",
@@ -117,8 +118,9 @@
     "tsconfig-paths": "3.4.2",
     "tslint": "5.11.0",
     "tslint-config-prettier": "1.15.0",
-    "typeorm-fixtures": "0.8.7",
+    "typeorm-fixtures": "0.8.8",
     "typescript": "3.9.2",
+    "weak-napi": "2.0.2",
     "webpack": "4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-node-externals": "1.7.2"
