--- a/package.json
+++ b/package.json
@@ -19,11 +19,7 @@
     "build": "rm -rf dist && nest build",
     "pretest": "cross-env TYPEORM_DATABASE=altiore_contrib_test node bin/refresh.js && npm run migration:test:up",
     "test": "node --max-old-space-size=4096 --expose-gc node_modules/.bin/cross-env TYPEORM_DATABASE=altiore_contrib_test node_modules/.bin/jest --logHeapUsage --coverage -i -b --detectOpenHandles",
-    "test:m": "node --expose-gc node_modules/.bin/cross-env TYPEORM_DATABASE=altiore_contrib_test node_modules/.bin/jest --logHeapUsage --coverage --detectLeaks -i -b --detectOpenHandles",
-    "test:watch": "cross-env TYPEORM_DATABASE=altiore_contrib_test jest --watch --coverage -i -b --detectOpenHandles",
-    "pretest:dev": "cross-env TYPEORM_DATABASE=altiore_contrib_test node bin/refresh.js && npm run migration:test:up",
-    "test:dev": "cross-env TYPEORM_DATABASE=altiore_contrib_test jest -i -b --detectOpenHandles --forceExit --watch",
-    "test:coverage": "cross-env TYPEORM_DATABASE=altiore_contrib_test jest -i --forceExit --coverage",
+    "test:unit": "node --expose-gc node_modules/.bin/cross-env node_modules/.bin/jest --config jest.unit.config.js --logHeapUsage --coverage -i -b",
     "pretest:changed:only": "npm run pretest",
     "test:changed:only": "cross-env TYPEORM_DATABASE=altiore_contrib_test jest -i -b -o --detectOpenHandles --forceExit",
     "pretest:remote": "node bin/refresh.js && npm run migration:up && echo  \"Please, do NOT run LOCALLY!\"",
